[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.11.3",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pypdf>=6.8.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
]
